crates/products/agent-tools/tools/src/api/github/tests/snapshots/wt_tools__api__github__tests__cli_output__github_cli_json__comment_mr.snap
---
source: crates/products/agent-tools/tools/src/api/github/tests/cli_output.rs
expression: "serde_json::to_string_pretty(&value).unwrap()"
---
{
  "data": "Comment added.",
  "type": "confirmation"
}
