crates/products/agent-tools/tools/src/api/github/tests/snapshots/wt_tools__api__github__tests__cli_output__github_cli_json__edit_comment.snap
---
source: crates/products/agent-tools/tools/src/api/github/tests/cli_output.rs
expression: "serde_json::to_string_pretty(&value).unwrap()"
---
{
  "data": {
    "author": "agent",
    "body": "Updated.\n\n— WT world `wt`",
    "created_at": "2026-08-22T10:00:00Z",
    "handle": "123",
    "updated_at": "2026-08-23T10:00:00Z",
    "url": "https://github.test/acme/widget/pull/7#issuecomment-123"
  },
  "type": "general_comment"
}
