crates/products/agent-tools/tools/src/api/github/tests/snapshots/wt_tools__api__github__tests__cli_output__github_cli_json__list_ci.snap
---
source: crates/products/agent-tools/tools/src/api/github/tests/cli_output.rs
expression: "serde_json::to_string_pretty(&value).unwrap()"
---
{
  "data": {
    "jobs": [
      {
        "handle": "44",
        "name": "Linux",
        "run": "91",
        "state": "success",
        "url": "https://github.test/jobs/44"
      }
    ],
    "runs": [
      {
        "branch": "wt/fix-login",
        "handle": "91",
        "head": "abc123",
        "name": "CI",
        "state": "success",
        "trigger": "pull_request",
        "url": "https://github.test/runs/91"
      }
    ]
  },
  "type": "ci_runs_and_jobs"
}
