crates/products/agent-tools/tools/src/api/github/tests/snapshots/wt_tools__api__github__tests__cli_output__github_cli_json__list_comments.snap
---
source: crates/products/agent-tools/tools/src/api/github/tests/cli_output.rs
expression: "serde_json::to_string_pretty(&value).unwrap()"
---
{
  "data": [
    {
      "author": "reviewer",
      "body": "General feedback.",
      "created_at": "2026-08-22T10:00:00Z",
      "handle": "123",
      "updated_at": "2026-08-22T11:00:00Z",
      "url": "https://github.test/acme/widget/pull/7#issuecomment-123"
    }
  ],
  "type": "general_comments"
}
