crates/products/agent-tools/tools/src/api/github/tests/snapshots/wt_tools__api__github__tests__cli_output__github_cli_json__reply_thread.snap
---
source: crates/products/agent-tools/tools/src/api/github/tests/cli_output.rs
expression: "serde_json::to_string_pretty(&value).unwrap()"
---
{
  "data": "Reply added.",
  "type": "confirmation"
}
